--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "ccxt-cli": "npm run build > /dev/null && node dist/index.js"
+    "ccxt-cli": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
