--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "ccxt-cli",
-  "version": "1.0.0",
-  "description": "Interact with Binance and other Crypto Exchanges via your Terminal",
-  "main": "dist/index.js",
-  "bin": {
-    "ccxt-cli": "./dist/index.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "ccxt-cli": "ts-node src/index.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/coccoinomane/ccxt-cli.git"
-  },
-  "keywords": [
-    "crypto",
-    "cex",
-    "ccxt",
-    "cli",
-    "futures"
-  ],
-  "author": "coccoinomane",
-  "license": "MIT",
-  "homepage": "https://github.com/coccoinomane/ccxt-cli#readme",
-  "dependencies": {
-    "ccxt": "^4.4.74",
-    "chalk": "^4.1.2",
-    "cli-table3": "^0.6.3",
-    "commander": "^11.1.0",
-    "conf": "^10.2.0",
-    "dotenv": "^16.5.0",
-    "inquirer": "^8.2.6"
-  },
-  "devDependencies": {
-    "@types/inquirer": "^8.2.10",
-    "@types/node": "^20.17.30",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.8.3"
-  }
+    "name": "ccxt-cli",
+    "version": "1.0.0",
+    "description": "Interact with Binance and other Crypto Exchanges via your Terminal",
+    "main": "dist/index.js",
+    "bin": {
+        "ccxt-cli": "./dist/index.js"
+    },
+    "scripts": {
+        "build": "tsc",
+        "ccxt-cli": "ts-node src/index.ts",
+        "format": "prettier --write \"src/**/*.ts\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/coccoinomane/ccxt-cli.git"
+    },
+    "keywords": [
+        "crypto",
+        "cex",
+        "ccxt",
+        "cli",
+        "futures"
+    ],
+    "author": "coccoinomane",
+    "license": "MIT",
+    "homepage": "https://github.com/coccoinomane/ccxt-cli#readme",
+    "dependencies": {
+        "ccxt": "^4.4.74",
+        "chalk": "^4.1.2",
+        "cli-table3": "^0.6.3",
+        "commander": "^11.1.0",
+        "conf": "^10.2.0",
+        "dotenv": "^16.5.0",
+        "inquirer": "^8.2.6"
+    },
+    "devDependencies": {
+        "@types/inquirer": "^8.2.10",
+        "@types/node": "^20.17.30",
+        "prettier": "^3.5.3",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.8.3"
+    }
 }
